// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapFellowsFilterCard tests should render MapFellowsFilterCards when props display is passed in as project 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MapFellowsFilterCard
    display="project"
    fellowSummaryDetails={
        Array [
            Object {
              "apprEndDate": "2019-01-16",
              "apprStartDate": "2018-10-15",
              "devPulseAverage": "1.04",
              "firstName": "Kingsley",
              "lastName": "Obot",
              "level": "D0B Apprenticeship",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Watch Tower",
              "simsEndDate": null,
              "simsStartDate": null,
              "status": "ltWk5OffTrack",
            },
            Object {
              "apprEndDate": "2019-01-16",
              "apprStartDate": "2018-10-15",
              "devPulseAverage": "1.04",
              "firstName": "Kingsley",
              "lastName": "Obot",
              "level": "D0B Apprenticeship",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "pipStatus": true,
              "project": "Watch Tower",
              "simsEndDate": null,
              "simsStartDate": null,
              "status": "gteWk5OffTrack",
            },
            Object {
              "apprEndDate": "2019-01-16",
              "apprStartDate": "2018-10-15",
              "devPulseAverage": "1.04",
              "firstName": "Oluseyi",
              "lastName": "Anani",
              "level": "D0B Apprenticeship",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Watch Tower",
              "simsEndDate": null,
              "simsStartDate": null,
              "status": "onTrack",
            },
            Object {
              "apprEndDate": "2019-01-16",
              "apprStartDate": "2018-10-15",
              "devPulseAverage": "1.04",
              "firstName": "Brian",
              "lastName": "Bett",
              "level": "D0B Apprenticeship",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Watch Tower",
              "simsEndDate": null,
              "simsStartDate": null,
              "status": "onTrack",
            },
            Object {
              "apprEndDate": null,
              "apprStartDate": null,
              "devPulseAverage": "1.04",
              "firstName": "",
              "lastName": "",
              "level": "D0A Simulations",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Noldor",
              "simsEndDate": "2019-06-14",
              "simsStartDate": "2019-03-06",
              "status": "gteWk5OffTrack",
            },
            Object {
              "apprEndDate": null,
              "apprStartDate": null,
              "devPulseAverage": "1.04",
              "level": "D0A Simulations",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Noldor",
              "simsEndDate": "2019-06-14",
              "simsStartDate": "2019-03-06",
              "status": "gteWk5OffTrack",
              "user": Object {
                "firstName": "somereallyreallylongusername",
                "lastName": "",
              },
            },
          ]
    }
    handleCardClick={[Function]}
    isTicked={
        Object {
            "project": "All Products",
            "status": "All Fellows",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <FellowFilterCard
          cardName="All Products"
          displayPicture={false}
          filterKey="project"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={6}
          picture=""
/>,
        <FellowFilterCard
          cardName="Watch Tower"
          displayPicture={false}
          filterKey="project"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={4}
          picture=""
/>,
        <FellowFilterCard
          cardName="Noldor"
          displayPicture={false}
          filterKey="project"
          handleCardClick={[Function]}
          isManager={false}
          isTicked={
                    Object {
                              "project": "All Products",
                              "status": "All Fellows",
                            }
          }
          numberOfFellows={2}
          picture=""
/>,
      ],
      "className": "manager-slick",
      "infinite": false,
      "nextArrow": <NavArrow
        buttonClass="slick-next"
        iconClass="fa-angle-right"
        onClick={[Function]}
/>,
      "prevArrow": <NavArrow
        buttonClass="slick-prev"
        iconClass="fa-angle-left"
        onClick={[Function]}
/>,
      "responsive": Array [
        Object {
          "breakpoint": 1000,
          "settings": Object {
            "slidesToScroll": 1,
            "slidesToShow": 2,
          },
        },
        Object {
          "breakpoint": 700,
          "settings": Object {
            "slidesToScroll": 1,
            "slidesToShow": 1,
          },
        },
      ],
      "rows": 1,
      "slidesToShow": 2.9999,
      "swipeToSlide": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "weak-key-4",
        "nodeType": "function",
        "props": Object {
          "cardName": "All Products",
          "displayPicture": false,
          "filterKey": "project",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 6,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "weak-key-5",
        "nodeType": "function",
        "props": Object {
          "cardName": "Watch Tower",
          "displayPicture": false,
          "filterKey": "project",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 4,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "weak-key-6",
        "nodeType": "function",
        "props": Object {
          "cardName": "Noldor",
          "displayPicture": false,
          "filterKey": "project",
          "handleCardClick": [Function],
          "isManager": false,
          "isTicked": Object {
            "project": "All Products",
            "status": "All Fellows",
          },
          "numberOfFellows": 2,
          "picture": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <FellowFilterCard
            cardName="All Products"
            displayPicture={false}
            filterKey="project"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={6}
            picture=""
/>,
          <FellowFilterCard
            cardName="Watch Tower"
            displayPicture={false}
            filterKey="project"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={4}
            picture=""
/>,
          <FellowFilterCard
            cardName="Noldor"
            displayPicture={false}
            filterKey="project"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={2}
            picture=""
/>,
        ],
        "className": "manager-slick",
        "infinite": false,
        "nextArrow": <NavArrow
          buttonClass="slick-next"
          iconClass="fa-angle-right"
          onClick={[Function]}
/>,
        "prevArrow": <NavArrow
          buttonClass="slick-prev"
          iconClass="fa-angle-left"
          onClick={[Function]}
/>,
        "responsive": Array [
          Object {
            "breakpoint": 1000,
            "settings": Object {
              "slidesToScroll": 1,
              "slidesToShow": 2,
            },
          },
          Object {
            "breakpoint": 700,
            "settings": Object {
              "slidesToScroll": 1,
              "slidesToShow": 1,
            },
          },
        ],
        "rows": 1,
        "slidesToShow": 2.9999,
        "swipeToSlide": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "weak-key-4",
          "nodeType": "function",
          "props": Object {
            "cardName": "All Products",
            "displayPicture": false,
            "filterKey": "project",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 6,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-5",
          "nodeType": "function",
          "props": Object {
            "cardName": "Watch Tower",
            "displayPicture": false,
            "filterKey": "project",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 4,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-6",
          "nodeType": "function",
          "props": Object {
            "cardName": "Noldor",
            "displayPicture": false,
            "filterKey": "project",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 2,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`MapFellowsFilterCard tests should render MapFellowsFilterCards without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <MapFellowsFilterCard
    display="status"
    fellowSummaryDetails={
        Array [
            Object {
              "apprEndDate": "2019-01-16",
              "apprStartDate": "2018-10-15",
              "devPulseAverage": "1.04",
              "firstName": "Kingsley",
              "lastName": "Obot",
              "level": "D0B Apprenticeship",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Watch Tower",
              "simsEndDate": null,
              "simsStartDate": null,
              "status": "ltWk5OffTrack",
            },
            Object {
              "apprEndDate": "2019-01-16",
              "apprStartDate": "2018-10-15",
              "devPulseAverage": "1.04",
              "firstName": "Kingsley",
              "lastName": "Obot",
              "level": "D0B Apprenticeship",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "pipStatus": true,
              "project": "Watch Tower",
              "simsEndDate": null,
              "simsStartDate": null,
              "status": "gteWk5OffTrack",
            },
            Object {
              "apprEndDate": "2019-01-16",
              "apprStartDate": "2018-10-15",
              "devPulseAverage": "1.04",
              "firstName": "Oluseyi",
              "lastName": "Anani",
              "level": "D0B Apprenticeship",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Watch Tower",
              "simsEndDate": null,
              "simsStartDate": null,
              "status": "onTrack",
            },
            Object {
              "apprEndDate": "2019-01-16",
              "apprStartDate": "2018-10-15",
              "devPulseAverage": "1.04",
              "firstName": "Brian",
              "lastName": "Bett",
              "level": "D0B Apprenticeship",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Watch Tower",
              "simsEndDate": null,
              "simsStartDate": null,
              "status": "onTrack",
            },
            Object {
              "apprEndDate": null,
              "apprStartDate": null,
              "devPulseAverage": "1.04",
              "firstName": "",
              "lastName": "",
              "level": "D0A Simulations",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Noldor",
              "simsEndDate": "2019-06-14",
              "simsStartDate": "2019-03-06",
              "status": "gteWk5OffTrack",
            },
            Object {
              "apprEndDate": null,
              "apprStartDate": null,
              "devPulseAverage": "1.04",
              "level": "D0A Simulations",
              "lmsOutput": "4/18",
              "picture": "https://lh6.googleusercontent.com/-BufLjmmIcGY/AAAAAAAAAAI/AAAAAAAAAAA/ACevoQOvARh88U8Y-5JFnZpZ88zfTlb93A/mo/photo.jpg?sz=50",
              "project": "Noldor",
              "simsEndDate": "2019-06-14",
              "simsStartDate": "2019-03-06",
              "status": "gteWk5OffTrack",
              "user": Object {
                "firstName": "somereallyreallylongusername",
                "lastName": "",
              },
            },
          ]
    }
    handleCardClick={[Function]}
    isTicked={
        Object {
            "project": "All Products",
            "status": "All Fellows",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="row"
>
        <FellowFilterCard
                cardName="All Fellows"
                displayPicture={false}
                filterKey="status"
                handleCardClick={[Function]}
                isManager={false}
                isTicked={
                        Object {
                                "project": "All Products",
                                "status": "All Fellows",
                              }
                }
                numberOfFellows={6}
                picture=""
        />
        <FellowFilterCard
                cardName="On Track"
                displayPicture={false}
                filterKey="status"
                handleCardClick={[Function]}
                isManager={false}
                isTicked={
                        Object {
                                "project": "All Products",
                                "status": "All Fellows",
                              }
                }
                numberOfFellows={2}
                picture=""
        />
        <FellowFilterCard
                cardName="Off Track"
                displayPicture={false}
                filterKey="status"
                handleCardClick={[Function]}
                isManager={false}
                isTicked={
                        Object {
                                "project": "All Products",
                                "status": "All Fellows",
                              }
                }
                numberOfFellows={3}
                picture=""
        />
        <FellowFilterCard
                cardName="PIP"
                displayPicture={false}
                filterKey="status"
                handleCardClick={[Function]}
                isManager={false}
                isTicked={
                        Object {
                                "project": "All Products",
                                "status": "All Fellows",
                              }
                }
                numberOfFellows={1}
                picture=""
        />
</div>,
      "className": "ops-dashboard__fellows-summary",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <FellowFilterCard
            cardName="All Fellows"
            displayPicture={false}
            filterKey="status"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={6}
            picture=""
/>,
          <FellowFilterCard
            cardName="On Track"
            displayPicture={false}
            filterKey="status"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={2}
            picture=""
/>,
          <FellowFilterCard
            cardName="Off Track"
            displayPicture={false}
            filterKey="status"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={3}
            picture=""
/>,
          <FellowFilterCard
            cardName="PIP"
            displayPicture={false}
            filterKey="status"
            handleCardClick={[Function]}
            isManager={false}
            isTicked={
                        Object {
                                    "project": "All Products",
                                    "status": "All Fellows",
                                  }
            }
            numberOfFellows={1}
            picture=""
/>,
        ],
        "className": "row",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "weak-key-0",
          "nodeType": "function",
          "props": Object {
            "cardName": "All Fellows",
            "displayPicture": false,
            "filterKey": "status",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 6,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-1",
          "nodeType": "function",
          "props": Object {
            "cardName": "On Track",
            "displayPicture": false,
            "filterKey": "status",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 2,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-2",
          "nodeType": "function",
          "props": Object {
            "cardName": "Off Track",
            "displayPicture": false,
            "filterKey": "status",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 3,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "weak-key-3",
          "nodeType": "function",
          "props": Object {
            "cardName": "PIP",
            "displayPicture": false,
            "filterKey": "status",
            "handleCardClick": [Function],
            "isManager": false,
            "isTicked": Object {
              "project": "All Products",
              "status": "All Fellows",
            },
            "numberOfFellows": 1,
            "picture": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="row"
>
          <FellowFilterCard
                    cardName="All Fellows"
                    displayPicture={false}
                    filterKey="status"
                    handleCardClick={[Function]}
                    isManager={false}
                    isTicked={
                              Object {
                                        "project": "All Products",
                                        "status": "All Fellows",
                                      }
                    }
                    numberOfFellows={6}
                    picture=""
          />
          <FellowFilterCard
                    cardName="On Track"
                    displayPicture={false}
                    filterKey="status"
                    handleCardClick={[Function]}
                    isManager={false}
                    isTicked={
                              Object {
                                        "project": "All Products",
                                        "status": "All Fellows",
                                      }
                    }
                    numberOfFellows={2}
                    picture=""
          />
          <FellowFilterCard
                    cardName="Off Track"
                    displayPicture={false}
                    filterKey="status"
                    handleCardClick={[Function]}
                    isManager={false}
                    isTicked={
                              Object {
                                        "project": "All Products",
                                        "status": "All Fellows",
                                      }
                    }
                    numberOfFellows={3}
                    picture=""
          />
          <FellowFilterCard
                    cardName="PIP"
                    displayPicture={false}
                    filterKey="status"
                    handleCardClick={[Function]}
                    isManager={false}
                    isTicked={
                              Object {
                                        "project": "All Products",
                                        "status": "All Fellows",
                                      }
                    }
                    numberOfFellows={1}
                    picture=""
          />
</div>,
        "className": "ops-dashboard__fellows-summary",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <FellowFilterCard
              cardName="All Fellows"
              displayPicture={false}
              filterKey="status"
              handleCardClick={[Function]}
              isManager={false}
              isTicked={
                            Object {
                                          "project": "All Products",
                                          "status": "All Fellows",
                                        }
              }
              numberOfFellows={6}
              picture=""
/>,
            <FellowFilterCard
              cardName="On Track"
              displayPicture={false}
              filterKey="status"
              handleCardClick={[Function]}
              isManager={false}
              isTicked={
                            Object {
                                          "project": "All Products",
                                          "status": "All Fellows",
                                        }
              }
              numberOfFellows={2}
              picture=""
/>,
            <FellowFilterCard
              cardName="Off Track"
              displayPicture={false}
              filterKey="status"
              handleCardClick={[Function]}
              isManager={false}
              isTicked={
                            Object {
                                          "project": "All Products",
                                          "status": "All Fellows",
                                        }
              }
              numberOfFellows={3}
              picture=""
/>,
            <FellowFilterCard
              cardName="PIP"
              displayPicture={false}
              filterKey="status"
              handleCardClick={[Function]}
              isManager={false}
              isTicked={
                            Object {
                                          "project": "All Products",
                                          "status": "All Fellows",
                                        }
              }
              numberOfFellows={1}
              picture=""
/>,
          ],
          "className": "row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "weak-key-0",
            "nodeType": "function",
            "props": Object {
              "cardName": "All Fellows",
              "displayPicture": false,
              "filterKey": "status",
              "handleCardClick": [Function],
              "isManager": false,
              "isTicked": Object {
                "project": "All Products",
                "status": "All Fellows",
              },
              "numberOfFellows": 6,
              "picture": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "weak-key-1",
            "nodeType": "function",
            "props": Object {
              "cardName": "On Track",
              "displayPicture": false,
              "filterKey": "status",
              "handleCardClick": [Function],
              "isManager": false,
              "isTicked": Object {
                "project": "All Products",
                "status": "All Fellows",
              },
              "numberOfFellows": 2,
              "picture": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "weak-key-2",
            "nodeType": "function",
            "props": Object {
              "cardName": "Off Track",
              "displayPicture": false,
              "filterKey": "status",
              "handleCardClick": [Function],
              "isManager": false,
              "isTicked": Object {
                "project": "All Products",
                "status": "All Fellows",
              },
              "numberOfFellows": 3,
              "picture": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": "weak-key-3",
            "nodeType": "function",
            "props": Object {
              "cardName": "PIP",
              "displayPicture": false,
              "filterKey": "status",
              "handleCardClick": [Function],
              "isManager": false,
              "isTicked": Object {
                "project": "All Products",
                "status": "All Fellows",
              },
              "numberOfFellows": 1,
              "picture": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
